service.yml
apiVersion: v1
kind: Service
metadata:
  name: apitask
  labels:
    app: apitask
spec:
  type: NodePort
  selector:
    app: apitask
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
