ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apitask
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: apitask
            port:
              number: 80
